buildscript {
    repositories {
        maven { url = 'https://files.minecraftforge.net/maven' }
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath group: 'net.minecraftforge.gradle', name: 'ForgeGradle', version: '3.+', changing: true
    }
}

plugins {
    id 'com.github.johnrengelman.shadow' version '4.0.4'
    id 'java'
}

apply plugin: 'net.minecraftforge.gradle'
// Only edit below this line, the above code adds and enables the necessary things for Forge to be setup.
apply plugin: 'eclipse'
apply plugin: 'maven-publish'

version = '1.0'
group = 'me.swirtzly' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
archivesBaseName = 'regeneration'

sourceCompatibility = targetCompatibility = compileJava.sourceCompatibility = compileJava.targetCompatibility = '1.8' // Need this here so eclipse task generates correctly.

configurations {
    include
}


repositories {
    maven {
        url = "https://dark-roleplay.net/files/maven_fril/"
    }
}

minecraft {
    mappings channel: 'snapshot', version: '20190719-1.14.3'

    runs {
        client {
            workingDirectory project.file('run')

            // Recommended logging data for a userdev environment
            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'

            // Recommended logging level for the console
            property 'forge.logging.console.level', 'debug'

            mods {
                regeneration {
                    source sourceSets.main
                }
            }
        }

        server {
            workingDirectory project.file('run')

            // Recommended logging data for a userdev environment
            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'

            // Recommended logging level for the console
            property 'forge.logging.console.level', 'debug'

            mods {
                regeneration {
                    source sourceSets.main
                }
            }
        }

        data {
            workingDirectory project.file('run')

            // Recommended logging data for a userdev environment
            property 'forge.logging.markers', 'SCAN,REGISTRIES,REGISTRYDUMP'

            // Recommended logging level for the console
            property 'forge.logging.console.level', 'debug'

            args '--mod', 'regeneration', '--all', '--output', file('src/generated/resources/')

            mods {
                regeneration {
                    source sourceSets.main
                }
            }
        }
    }

    accessTransformer = file('src/main/resources/META-INF/accesstransformer.cfg')
}



dependencies {
    minecraft 'net.minecraftforge:forge:1.14.4-28.0.45'
    compile 'org.jsoup:jsoup:1.11.3'
    include 'org.jsoup:jsoup:1.11.3'

 //   compile 'me.swirtzly:animate-me:1.14.4-1.2.0'
 //   include 'me.swirtzly:animate-me:1.14.4-1.2.0'
}

jar {
    manifest {
        attributes([
                "Specification-Title": "regeneration",
                "Specification-Vendor": "Swirtzly",
                "Specification-Version": "${version}",
                "Implementation-Title": project.name,
                "Implementation-Version": "${version}",
                "Implementation-Vendor" :"Swirtzly",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ])
    }
}

artifacts{
    archives shadowJar
}

shadowJar {
    dependencies {
        include(dependency('org.jsoup:.*'))
    }

    relocate 'org.jsoup', 'me.swirtzly.jsoup'

    classifier '' // Replace the default JAR
}

reobf {
    shadowJar {
        dependsOn createMcpToSrg
        mappings = createMcpToSrg.output
    }
}